statum-macros/tests/ui/invalid_machine_wrong_generic.stderr
error: Error: #[machine] structs must have a generic type parameter that matches the #[state] enum.

       Fix: Change the generic type parameter of `Machine` to match `MachineState`.

       Expected:
       pub struct Machine<MachineState> { ... }

       Found:
       pub struct Machine<S : Clone> { ... }
  --> tests/ui/invalid_machine_wrong_generic.rs:13:1
   |
13 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_wrong_generic.rs:16:2
   |
16 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_wrong_generic.rs`
